# cif-digitisation-platform

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  SARVAM_OCR_EVALUATION_ARCHITECTURE.md  WIF digitisation Project Landscaping.html  WIF digitisation Project Landscaping.md  commands.md  deploy.sh  eval.txt  example.env  launch.sh  package-lock.json  package.json  playwright.config.ts  service
.github/workflows/: ci.yml
backend/: app.py  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: digitize.py  frontend.py  geo.py  results.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  ocr_record.py
backend/app/schemas/: case_data.py  digitize.py
backend/app/services/: document_service.py  extraction_service.py  frontend_service.py  geo_service.py  job_service.py  normalization_service.py  persistence_service.py  s3_service.py
backend/app/utils/: location_utils.py  time_utils.py
docs/: consolidated_project_report.md  model_evaluation_sarvam_llm.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
scripts/: audit_outputs.py  compare_runs.py  deploy.sh  deploy_lightsail.sh  dev-all.mjs  launch.sh  launch_lightsail.sh  llm_extract.py  review_outputs.py  run_eval.py  s3_file_transfer.py
src/: App.jsx
src/api/: digitizeClient.js
src/config/: roleAccess.js
tests/: pages.spec.ts
(+35 files in other folders)
