[project]
name = "cif-digitisation-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.31,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "python-dotenv>=1.1.1,<2.0",
  "PyJWT>=2.10.1,<3.0",
  "cryptography>=43.0.0,<46.0.0",
  "requests>=2.32.5,<3.0",
  "PyMuPDF>=1.24.0,<2.0",
  "opencv-python-headless>=4.8.0,<5.0",
  "Pillow>=9.0.0,<11.0",
  "numpy>=2.1.0,<3.0",
]

[tool.black]
line-length = 100
target-version = ["py313"]
skip-string-normalization = false

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["venv", ".venv", "__pycache__"]

[tool.ruff.lint]
# Core, low-noise ruleset (good starting point)
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # import sorting
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
]
ignore = [
  "E501", # line length handled by black
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.format]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
# Keep formatting responsibility with Black in Option B
# (So we won't run `ruff format` in pre-commit)
